--- a/cpld/cpld-contact.html
+++ b/cpld/cpld-contact.html
@@ -209,10 +209,10 @@
 <body>
     <div class="container">
         <header>
-            <a href="cpld-landing.html" class="logo">CPLD</a>
+            <a href="index.html" class="logo">CPLD</a>
             <p class="tagline">Chilean Political Landscape Dataset · 1989—2024</p>
             <nav class="nav-tabs">
-                <a href="cpld-landing.html" class="nav-tab">Home</a>
+                <a href="index.html" class="nav-tab">Home</a>
                 <a href="cpld-about.html" class="nav-tab">About</a>
                 <a href="cpld-contact.html" class="nav-tab active">Contact</a>
             </nav>
@@ -234,7 +234,7 @@
                 <div class="contact-card">
                     <div class="contact-label">Email</div>
                     <div class="contact-value">
-                        <a href="mailto:kenneth.bunker@uss.cl">kenneth.bunker@uss.cl</a>
+                        <a href="/cdn-cgi/l/email-protection#a6cdc3c8c8c3d2ce88c4d3c8cdc3d4e6d3d5d588c5ca"><span class="__cf_email__" data-cfemail="3b505e55555e4f5315594e55505e497b4e4848155857">[email&#160;protected]</span></a>
                     </div>
                 </div>
 
@@ -284,10 +284,4 @@
         </main>
 
         <footer>
-            <p>Kenneth Bunker · <a href="mailto:kenneth.bunker@uss.cl">kenneth.bunker@uss.cl</a></p>
-            <p style="margin-top: 0.5rem;">Universidad San Sebastián · Universidad de Verona</p>
-            <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2025 CPLD · Licensed under CC BY-NC-ND 4.0</p>
-        </footer>
-    </div>
-</body>
-</html>
+            <p>Kenneth Bunker · <a href="/cdn-cgi/l/email-protection#6308060d0d06170b4d01160d080611231610104d000f"><span class="__cf_email__" data-cfemail="83e8e6edede6f7ebade1f6ede8e6f1c3f6f0f0ade0ef">[email&#160;protec
