--- a/cpld/cpld-about.html
+++ b/cpld/cpld-about.html
@@ -178,10 +178,10 @@
 <body>
     <div class="container">
         <header>
-            <a href="cpld-landing.html" class="logo">CPLD</a>
+            <a href="index.html" class="logo">CPLD</a>
             <p class="tagline">Chilean Political Landscape Dataset · 1989—2024</p>
             <nav class="nav-tabs">
-                <a href="cpld-landing.html" class="nav-tab">Home</a>
+                <a href="index.html" class="nav-tab">Home</a>
                 <a href="cpld-about.html" class="nav-tab active">About</a>
                 <a href="cpld-contact.html" class="nav-tab">Contact</a>
             </nav>
@@ -191,17 +191,17 @@
             <h1 class="page-title">About CPLD</h1>
 
             <div class="content">
-                <p>The <strong>Chilean Political Landscape Dataset (CPLD)</strong> is the first comprehensive longitudinal database of its kind, consolidating district-level electoral outcomes across more than three decades of Chilean democracy, from 1989 to 2024. The dataset is updated regularly to incorporate new electoral results and refined indicators.</p>
+                <p>The <strong>Chilean Political Landscape Dataset (CPLD)</strong> is the first comprehensive longitudinal database of its kind, consolidating district-level electoral outcomes across more than three decades of Chilean democracy, from 1989 to 2024. <strong>Version 1.0</strong> contains 5,301 observations across 42 variables. The dataset is updated regularly to incorporate new electoral results and refined indicators, with future versions expanding coverage as new elections occur.</p>
 
                 <h2 class="section-title">The Data</h2>
                 
                 <p>This dataset addresses a critical gap in Chilean political research. Much of the existing literature relied on national aggregates that obscured underlying dynamics—variations that district-level data can reveal. The CPLD provides standardized, granular data that enables more nuanced analysis of party system evolution, institutional reforms, and electoral dynamics at the subnational level.</p>
 
-                <p>By offering consistent, comparable measures across 346 districts and 35 years, the CPLD allows researchers to detect patterns invisible in aggregate statistics: the early onset of party system fragmentation, ideological drift at the district level, and asymmetric changes across the political spectrum. This level of detail is essential for understanding how Chile's once-stable democracy evolved through periods of institutional reform and political crisis.</p>
+                <p>By offering consistent, comparable measures across varying numbers of districts (depending on election type: 345 for mayors, 28 for deputies since 2017, 60 for deputies 1989-2013) and 35 years, the CPLD allows researchers to detect patterns invisible in aggregate statistics: the early onset of party system fragmentation, ideological drift at the district level, and asymmetric changes across the political spectrum. This level of detail is essential for understanding how Chile's once-stable democracy evolved through periods of institutional reform and political crisis.</p>
 
                 <h2 class="section-title">Dataset Scope</h2>
 
-                <p>The CPLD includes <strong>5,301 observations across 42 variables</strong> covering:</p>
+                <p>The CPLD v1.0 includes <strong>5,301 observations across 42 variables</strong> covering:</p>
 
                 <ul>
                     <li><strong>Legislative elections:</strong> Chamber of Deputies (Diputados) and Senate (Senadores)</li>
@@ -210,8 +210,10 @@
                     <li><strong>Constitutional Conventions:</strong> Constituyentes (2022 and 2023)</li>
                 </ul>
 
+                <p>The number of districts varies by election type and period: 345 districts for mayoral elections, 28 districts for deputies since 2017, 60 districts for deputies 1989-2013, among other configurations reflecting Chile's evolving electoral geography.</p>
+
                 <div class="highlight-box">
-                    <strong>Current version:</strong> v1.0 · <strong>Size:</strong> 1.8MB · <strong>Updated:</strong> November 2025
+                    <strong>Current version:</strong> v1.0 · <strong>Size:</strong> 1.8MB · <strong>Updated:</strong> November 2025 · <strong>Future versions:</strong> Will expand as new elections occur
                 </div>
 
                 <h2 class="section-title">Key Variables</h2>
