--- a/cpld/cpld-about.html
+++ b/cpld/cpld-about.html
@@ -34,6 +34,16 @@
             max-width: 900px;
             margin: 0 auto;
             padding: 3rem 2rem;
+            position: relative;
+        }
+
+        .top-line {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 2px;
+            background: var(--grey-light);
         }
 
         header {
@@ -42,10 +52,30 @@
             border-bottom: 1px solid var(--grey-light);
         }
 
+        .logo-container {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            margin-bottom: 1.5rem;
+            transition: opacity 0.2s ease;
+        }
+
+        .logo-container:hover {
+            opacity: 0.7;
+        }
+
+        .logo-image {
+            width: 50px;
+            height: 50px;
+        }
+
+        .logo-text {
+            flex: 1;
+        }
+
         .nav-tabs {
             display: flex;
             gap: 2rem;
-            margin-top: 1.5rem;
         }
 
         .nav-tab {
@@ -70,17 +100,11 @@
 
         .logo {
             font-family: 'JetBrains Mono', monospace;
-            font-size: 2.5rem;
+            font-size: 2rem;
             font-weight: 600;
             color: var(--black);
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.25rem;
             letter-spacing: -0.02em;
-            text-decoration: none;
-            display: inline-block;
-        }
-
-        .logo:hover {
-            color: var(--blue);
         }
 
         .tagline {
@@ -177,9 +201,17 @@
 </head>
 <body>
     <div class="container">
+        <div class="top-line"></div>
         <header>
-            <a href="index.html" class="logo">CPLD</a>
-            <p class="tagline">Chilean Political Landscape Dataset · 1989—2024</p>
+            <a href="index.html" style="text-decoration: none;">
+                <div class="logo-container">
+                    <img src="logo.svg" alt="CPLD Logo" class="logo-image">
+                    <div class="logo-text">
+                        <h1 class="logo">CPLD</h1>
+                        <p class="tagline">Chilean Political Landscape Dataset · 1989—2024</p>
+                    </div>
+                </div>
+            </a>
             <nav class="nav-tabs">
                 <a href="index.html" class="nav-tab">Home</a>
                 <a href="cpld-about.html" class="nav-tab active">About</a>
