--- a/cpld/cpld-contact.html
+++ b/cpld/cpld-contact.html
@@ -54,7 +54,7 @@
 
         .logo-container {
             display: flex;
-            align-items: center;
+            align-items: stretch;
             gap: 1rem;
             margin-bottom: 1.5rem;
             transition: opacity 0.2s ease;
@@ -65,8 +65,8 @@
         }
 
         .logo-image {
-            width: 50px;
-            height: 50px;
+            width: auto;
+            height: 60px;
         }
 
         .logo-text {
