--- a/cpld/index.html
+++ b/cpld/index.html
@@ -54,14 +54,14 @@
 
         .logo-container {
             display: flex;
-            align-items: center;
+            align-items: stretch;
             gap: 1rem;
             margin-bottom: 1.5rem;
         }
 
         .logo-image {
-            width: 50px;
-            height: 50px;
+            width: auto;
+            height: 60px;
         }
 
         .logo-text {
