--- a/cpld/index.html
+++ b/cpld/index.html
@@ -28,12 +28,13 @@
             color: var(--black);
             line-height: 1.6;
             -webkit-font-smoothing: antialiased;
+            padding-top: 2rem;
         }
 
         .container {
             max-width: 900px;
             margin: 0 auto;
-            padding: 3rem 2rem;
+            padding: 1rem 2rem 3rem;
             position: relative;
         }
 
@@ -54,18 +55,23 @@
 
         .logo-container {
             display: flex;
-            align-items: stretch;
+            align-items: flex-start;
             gap: 1rem;
             margin-bottom: 1.5rem;
         }
 
         .logo-image {
             width: auto;
-            height: 60px;
+            height: 100%;
+            max-height: 70px;
+            flex-shrink: 0;
         }
 
         .logo-text {
             flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
 
         .nav-tabs {
