--- a/cpld/cpld-about.html
+++ b/cpld/cpld-about.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About · CPLD</title>
+    <title>About CPLD · Chilean Political Landscape Dataset · Electoral Data 1989-2024</title>
+    <meta name="description" content="Learn about the Chilean Political Landscape Dataset (CPLD): comprehensive district-level electoral data, party system indicators, ENP measures, polarization indices, and disproportionality calculations for Chilean democracy research.">
+    <meta name="keywords" content="Chile electoral data methodology, political science research data, ENP calculation, effective number of parties, Laakso Taagepera, Gallagher index, party system research, Chilean democracy data, comparative politics methods, electoral system analysis, district magnitude, seat product model">
+    <meta name="author" content="Kenneth Bunker">
+    
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600&family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         * {
@@ -39,12 +43,10 @@
         }
 
         .top-line {
-            position: fixed;
+            position: absolute;
             top: 2rem;
-            left: 50%;
-            transform: translateX(-50%);
-            width: calc(100% - 4rem);
-            max-width: 900px;
+            left: 2rem;
+            right: 2rem;
             height: 1px;
             background: var(--grey-light);
         }
