--- a/cpld/cpld-contact.html
+++ b/cpld/cpld-contact.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact · CPLD</title>
+    <title>Contact · CPLD · Chilean Political Data Research Collaboration</title>
+    <meta name="description" content="Contact Kenneth Bunker for questions about the Chilean Political Landscape Dataset, research collaborations, dataset support, or electoral data analysis. Open access data available via Harvard Dataverse.">
+    <meta name="keywords" content="Chile political data contact, electoral data researcher, political science collaboration, Chilean democracy research, dataset support, Kenneth Bunker contact, Universidad San Sebastián, University of Verona">
+    <meta name="author" content="Kenneth Bunker">
+    
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600&family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         * {
@@ -39,12 +43,10 @@
         }
 
         .top-line {
-            position: fixed;
+            position: absolute;
             top: 2rem;
-            left: 50%;
-            transform: translateX(-50%);
-            width: calc(100% - 4rem);
-            max-width: 900px;
+            left: 2rem;
+            right: 2rem;
             height: 1px;
             background: var(--grey-light);
         }
