--- a/cpld/index.html
+++ b/cpld/index.html
@@ -405,7 +405,9 @@
         <section class="section">
             <h2 class="section-title">Data Access</h2>
 
-              <p >Data formats optimized for Python (pandas) and R (tidyverse) workflows.</p>
+        <div class="description">
+            <p>Data formats optimized for Python (pandas) and R (tidyverse) workflows..</p>
+        </div>
 
             <ul class="link-list">
                 <li class="link-item">
