--- a/cpld/index.html
+++ b/cpld/index.html
@@ -381,6 +381,7 @@
 
         <div class="description">
             <p>Longitudinal dataset of <strong>district-level electoral outcomes</strong> covering three decades of Chilean democracy. Standardized measures of party system fragmentation, ideological orientation, and institutional change across legislative, regional, and municipal contests. <strong>Version 1.0</strong> contains 5,301 observations and will expand as new electoral data become available.</p>
+            <p style="margin-top: 1rem; font-size: 0.95rem; color: var(--grey-mid);">Data formats optimized for Python (pandas) and R (tidyverse) workflows.</p>
         </div>
 
         <div class="stats">
@@ -404,11 +405,6 @@
 
         <section class="section">
             <h2 class="section-title">Data Access</h2>
-
-        <div class="description">
-            <p>Data formats optimized for Python (pandas) and R (tidyverse) workflows..</p>
-        </div>
-
             <ul class="link-list">
                 <li class="link-item">
                     <a href="https://doi.org/10.7910/DVN/NGRY3R" class="link-primary" target="_blank">Download Dataset</a>
