--- a/cpld/index.html
+++ b/cpld/index.html
@@ -15,6 +15,8 @@
     <meta property="og:title" content="Chilean Political Landscape Dataset (CPLD) · 1989-2024">
     <meta property="og:description" content="Comprehensive district-level electoral data covering 35 years of Chilean democracy. 5,301 observations across 42 variables. Open access dataset for political science research.">
     <meta property="og:image" content="https://kennethbunker.github.io/cpld/logo.png">
+    <meta property="og:image:width" content="500">
+    <meta property="og:image:height" content="500">
     <meta property="og:image:alt" content="CPLD Logo">
     
     <!-- Twitter -->
