--- a/cpld/index.html
+++ b/cpld/index.html
@@ -540,7 +540,7 @@ doi: <a href="https://doi.org/10.1057/s41599-025-06180-1" style="color: var(--bl
 
         <section class="section">
             <h2 class="section-title">Funding</h2>
-            <p style="color: var(--grey-mid); font-size: 0.95rem;">This work was funded by the Agencia Nacional de Investigación y Desarrollo, ANID, NCS2024_007.</p>
+            <p style="color: var(--grey-mid); font-size: 0.95rem;">This work was partially funded by the Agencia Nacional de Investigación y Desarrollo, ANID.</p>
         </section>
 
         <section class="section" style="border-top: 1px solid var(--grey-light); padding-top: 2rem; margin-top: 3rem;">
