--- a/cpld/index.html
+++ b/cpld/index.html
@@ -83,7 +83,6 @@
             color: var(--black);
             line-height: 1.6;
             -webkit-font-smoothing: antialiased;
-            padding-top: 2rem;
         }
 
         .container {
@@ -169,6 +168,13 @@
             font-weight: 300;
         }
 
+        .page-title {
+            font-size: 2.5rem;
+            font-weight: 600;
+            margin-bottom: 2rem;
+            color: var(--black);
+        }
+
         .description {
             font-size: 1.1rem;
             line-height: 1.8;
@@ -246,7 +252,6 @@
             font-weight: 500;
             display: inline-block;
             transition: all 0.2s ease;
-            position: relative;
         }
 
         .link-primary:hover {
@@ -254,15 +259,10 @@
             transform: translateX(4px);
         }
 
-        .link-primary::before {
+        .link-primary:hover::before {
             content: '→';
             position: absolute;
             left: -1.5rem;
-            opacity: 0;
-            transition: opacity 0.2s ease;
-        }
-
-        .link-primary:hover::before {
             opacity: 1;
         }
 
@@ -385,8 +385,10 @@
             </nav>
         </header>
 
+        <h1 class="page-title">Overview</h1>
+
         <div class="description">
-            <p>Longitudinal dataset of <strong>district-level electoral outcomes</strong> covering three decades of Chilean democracy. Standardized measures of party system fragmentation, ideological orientation, and institutional change across legislative, regional, and municipal contests. <strong>Version 1.0</strong> contains 5,301 observations and will expand as new electoral data become available.</p>
+            <p>The Chilean Political Landscape Dataset is a longitudinal dataframe of <strong>district-level electoral outcomes</strong> spanning across four decades of Chilean democracy. It contains standardized measures of party system fragmentation, ideological orientation, and institutional change across legislative, regional, and municipal contests. <strong>Version 1.0</strong> contains 5,301 observations and will expand as new electoral data become available.</p>
             <p style="margin-top: 1rem; font-size: 0.95rem; color: var(--grey-mid);">Data formats optimized for Python (pandas) and R (tidyverse) workflows.</p>
         </div>
 
@@ -540,7 +542,7 @@ doi: <a href="https://doi.org/10.1057/s41599-025-06180-1" style="color: var(--bl
 
         <section class="section">
             <h2 class="section-title">Funding</h2>
-            <p style="color: var(--grey-mid); font-size: 0.95rem;">This work was partially funded by the Agencia Nacional de Investigación y Desarrollo, ANID.</p>
+            <p style="color: var(--grey-mid); font-size: 0.95rem;">This work was funded by the Agencia Nacional de Investigación y Desarrollo, ANID, NCS2024_007.</p>
         </section>
 
         <section class="section" style="border-top: 1px solid var(--grey-light); padding-top: 2rem; margin-top: 3rem;">
