--- a/cpld/index.html
+++ b/cpld/index.html
@@ -385,7 +385,7 @@
             </nav>
         </header>
 
-        <h1 class="page-title">Overview</h1>
+        <h2 class="section">Overview</h2>
 
         <div class="description">
             <p>The Chilean Political Landscape Dataset is a longitudinal dataframe of <strong>district-level electoral outcomes</strong> spanning across four decades of Chilean democracy. It contains standardized measures of party system fragmentation, ideological orientation, and institutional change across legislative, regional, and municipal contests. <strong>Version 1.0</strong> contains 5,301 observations and will expand as new electoral data become available.</p>
