--- a/cpld/cpld-contact.html
+++ b/cpld/cpld-contact.html
@@ -307,7 +307,7 @@
 
         <footer>
             <p>Kenneth Bunker</p>
-            <p style="margin-top: 0.5rem;">Universidad San Sebastián · Universidad de Verona</p>
+            <p style="margin-top: 0.5rem;">Universidad San Sebastián · Laboratorio Democracia y Gobierno</p>
             <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2025 CPLD · Licensed under CC BY-NC-ND 4.0</p>
         </footer>
     </div>
