--- a/cpld/index.html
+++ b/cpld/index.html
@@ -498,7 +498,7 @@ cpld <span class="code-keyword">%&gt;%</span>
             <h2 class="section-title">Citation</h2>
             
             <div class="citation-box">
-Bunker, Kenneth. 2025. "Decades of democracy: insights into the political landscape of Chile." <em>Humanities and Social Sciences Communications</em> 12, Article 1911.<br><br>
+Bunker, Kenneth. 2025. "Decades of democracy: insights into the political landscape of Chile." <em>Humanities and Social Sciences Communications</em> 12, 1911.<br><br>
 
 doi: <a href="https://doi.org/10.1057/s41599-025-06180-1" style="color: var(--blue);" target="_blank">10.1057/s41599-025-06180-1</a>
             </div>
@@ -522,19 +522,19 @@ doi: <a href="https://doi.org/10.1057/s41599-025-06180-1" style="color: var(--bl
             <h2 class="section-title">Related Publications</h2>
             <ul class="link-list">
                 <li class="link-item">
-                    <a href="https://doi.org/10.1057/s41599-025-06180-1" class="link-primary" target="_blank">Decades of Democracy (2025)</a>
+                    <a href="https://doi.org/10.1057/s41599-025-06180-1" class="link-primary" target="_blank">Decades of Democracy </a>
                     <div class="link-meta">Humanities and Social Sciences Communications · doi: 10.1057/s41599-025-06180-1</div>
                 </li>
                 <li class="link-item">
-                    <a href="https://doi.org/10.1007/978-3-031-96463-3" class="link-primary" target="_blank">Chile's Transformation Amidst Crisis (2025)</a>
+                    <a href="https://doi.org/10.1007/978-3-031-96463-3" class="link-primary" target="_blank">Chile's Transformation Amidst Crisis </a>
                     <div class="link-meta">Palgrave Macmillan · doi: 10.1007/978-3-031-96463-3</div>
                 </li>
                 <li class="link-item">
-                    <a href="https://doi.org/10.1089/elj.2024.0064" class="link-primary" target="_blank">Challenging Conventional Wisdom in New Democracies (2025)</a>
+                    <a href="https://doi.org/10.1089/elj.2024.0064" class="link-primary" target="_blank">Challenging Conventional Wisdom in New Democracies </a>
                     <div class="link-meta">Election Law Journal · doi: 10.1089/elj.2024.0064</div>
                 </li>
                 <li class="link-item">
-                    <a href="https://doi.org/10.1080/13569317.2025.2452179" class="link-primary" target="_blank">Mapping Party Systems Over Time (2025)</a>
+                    <a href="https://doi.org/10.1080/13569317.2025.2452179" class="link-primary" target="_blank">Mapping Party Systems Over Time </a>
                     <div class="link-meta">Journal of Political Ideologies · doi: 10.1080/13569317.2025.2452179</div>
                 </li>
             </ul>
