--- a/cpld/cpld-contact.html
+++ b/cpld/cpld-contact.html
@@ -287,7 +287,7 @@
 
             <div class="info-box">
                 <h3>Research Collaboration</h3>
-                <p>Interested in collaborating on research using the CPLD? I welcome inquiries about joint projects, co-authorship opportunities, and data extensions.</p>
+                <p>Interested in collaborating on research using the CPLD? We welcome inquiries about joint projects, co-authorship opportunities, and data extensions.</p>
                 <p>Please include a brief description of your research interests and proposed collaboration.</p>
             </div>
 
