--- a/cpld/cpld-about.html
+++ b/cpld/cpld-about.html
@@ -340,6 +340,7 @@
         </main>
 
         <footer>
-            <p>Kenneth Bunker · <a href="/cdn-cgi/l/email-protection#28434d46464d5c40064a5d46434d5a685d5b5b064b44"><span class="__cf_email__" data-cfemail="ea818f84848f9e82c4889f84818f98aa9f9999c48986">[email&#160;protected]</span></a></p>
+            <p>Kenneth Bunker</p>
             <p style="margin-top: 0.5rem;">Universidad San Sebastián · Laboratorio Democracia y Gobierno</p>
-            <p style
+            <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licensed under CC BY-NC-ND 4.0</p>
+        </footer> 
