--- a/cpld/index.html
+++ b/cpld/index.html
@@ -559,6 +559,7 @@ doi: <a href="https://doi.org/10.1057/s41599-025-06180-1" style="color: var(--bl
         </section>
 
         <footer>
-            <p>Kenneth Bunker · <a href="/cdn-cgi/l/email-protection#a1cac4cfcfc4d5c98fc3d4cfcac4d3e1d4d2d28fc2cd"><span class="__cf_email__" data-cfemail="3e555b50505b4a56105c4b50555b4c7e4b4d4d105d52">[email&#160;protected]</span></a></p>
+            <p>Kenneth Bunker</p>
             <p style="margin-top: 0.5rem;">Universidad San Sebastián · Laboratorio Democracia y Gobierno</p>
-            <p style
+            <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licensed under CC BY-NC-ND 4.0</p>
+        </footer> 
