--- a/cpld/cpld-contact.html
+++ b/cpld/cpld-contact.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XHPPDNKH57"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XHPPDNKH57');
+    </script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact · CPLD · Chilean Political Data Research Collaboration</title>
@@ -265,7 +274,7 @@
 
             <div class="content">
                 <p><strong>Principal Investigator:</strong> Kenneth Bunker</p>
-                <p><strong>Email:</strong> kenneth.bunker@uss.cl</p>
+                <p><strong>Email:</strong> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="68030d06060d1c00460a1d06030d1a281d1b1b460b04">[email&#160;protected]</a></p>
                 
                 <p style="margin-top: 2rem;"><strong>Affiliations:</strong></p>
                 <p>Universidad San Sebastián<br>
@@ -310,6 +319,3 @@
             <p style="margin-top: 0.5rem;">Universidad San Sebastián · Laboratorio Democracia y Gobierno</p>
             <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licensed under CC BY-NC-ND 4.0</p>
         </footer> 
-    </div>
-</body>
-</html>
