--- a/cpld/cpld-about.html
+++ b/cpld/cpld-about.html
@@ -346,6 +346,20 @@
 
                 <p>The dataset structure allows for hierarchical modeling, spatial analysis, and time-series cross-sectional analysis. Missing values (NA) reflect genuine data unavailability in historical records and are documented in the codebook.</p>
 
+                <h2 class="section-title">Citation</h2>
+
+                <p>When using the CPLD in your research, please cite both the dataset and the associated publication:</p>
+
+                <div class="highlight-box">
+                    <strong>Dataset:</strong><br>
+                    Bunker, Kenneth. 2025. "Chilean Political Landscape Dataset (CPLD)". Harvard Dataverse, V1.<br>
+                    DOI: <a href="https://doi.org/10.7910/DVN/NGRY3R" style="color: var(--blue);" target="_blank">10.7910/DVN/NGRY3R</a><br><br>
+
+                    <strong>Publication:</strong><br>
+                    Bunker, Kenneth. 2025. "Decades of democracy: insights into the political landscape of Chile." <em>Humanities and Social Sciences Communications</em> 12, Article 1911.<br>
+                    DOI: <a href="https://doi.org/10.1057/s41599-025-06180-1" style="color: var(--blue);" target="_blank">10.1057/s41599-025-06180-1</a>
+                </div>
+
         </main>
 
         <footer>
