--- a/cpld/index.html
+++ b/cpld/index.html
@@ -506,14 +506,31 @@ cpld <span class="code-keyword">%&gt;%</span>
         <section class="section">
             <h2 class="section-title">Citation</h2>
             
+            <p style="color: var(--grey-mid); font-size: 0.95rem; margin-bottom: 1.5rem;">When using the CPLD in your research, please cite both the dataset and the associated publication.</p>
+            
             <div class="citation-box">
-Bunker, Kenneth. 2025. "Decades of democracy: insights into the political landscape of Chile." <em>Humanities and Social Sciences Communications</em> 12, 1911.<br><br>
+<strong>Dataset:</strong><br>
+Bunker, Kenneth. 2025. "Chilean Political Landscape Dataset (CPLD)". Harvard Dataverse, V1.<br>
+doi: <a href="https://doi.org/10.7910/DVN/NGRY3R" style="color: var(--blue);" target="_blank">10.7910/DVN/NGRY3R</a><br><br>
 
+<strong>Publication:</strong><br>
+Bunker, Kenneth. 2025. "Decades of democracy: insights into the political landscape of Chile." <em>Humanities and Social Sciences Communications</em> 12, Article 1911.<br>
 doi: <a href="https://doi.org/10.1057/s41599-025-06180-1" style="color: var(--blue);" target="_blank">10.1057/s41599-025-06180-1</a>
             </div>
 
             <div class="code-block">
-<span class="code-comment">% BibTeX</span>
+<span class="code-comment">% BibTeX - Dataset</span>
+@data{bunker2025cpld,
+  author={Bunker, Kenneth},
+  title={{Chilean Political Landscape Dataset (CPLD)}},
+  year={2025},
+  publisher={Harvard Dataverse},
+  version={V1},
+  doi={10.7910/DVN/NGRY3R},
+  url={https://doi.org/10.7910/DVN/NGRY3R}
+}
+
+<span class="code-comment">% BibTeX - Publication</span>
 @article{bunker2025decades,
   title={Decades of democracy: insights into the political landscape of Chile},
   author={Bunker, Kenneth},
