--- a/cpld/cpld-about.html
+++ b/cpld/cpld-about.html
@@ -235,6 +235,11 @@
                 <a href="index.html" class="nav-tab">Home</a>
                 <a href="cpld-about.html" class="nav-tab active">About</a>
                 <a href="cpld-contact.html" class="nav-tab">Contact</a>
+                <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center;">
+                    <span style="color: var(--black); font-weight: 500;">English</span>
+                    <span style="color: var(--grey-light);">|</span>
+                    <a href="cpld-about-es.html" style="color: var(--grey-mid); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--blue)'" onmouseout="this.style.color='var(--grey-mid)'">Español</a>
+                </span>
             </nav>
         </header>
 
