--- a/cpld/cpld-contact.html
+++ b/cpld/cpld-contact.html
@@ -266,6 +266,11 @@
                 <a href="index.html" class="nav-tab">Home</a>
                 <a href="cpld-about.html" class="nav-tab">About</a>
                 <a href="cpld-contact.html" class="nav-tab active">Contact</a>
+                <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center;">
+                    <span style="color: var(--black); font-weight: 500;">English</span>
+                    <span style="color: var(--grey-light);">|</span>
+                    <a href="cpld-contact-es.html" style="color: var(--grey-mid); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--blue)'" onmouseout="this.style.color='var(--grey-mid)'">Español</a>
+                </span>
             </nav>
         </header>
 
@@ -274,7 +279,7 @@
 
             <div class="content">
                 <p><strong>Principal Investigator:</strong> Kenneth Bunker</p>
-                <p><strong>Email:</strong> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="68030d06060d1c00460a1d06030d1a281d1b1b460b04">[email&#160;protected]</a></p>
+                <p><strong>Email:</strong> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="0d66686363687965236f786366687f4d787e7e236e61">[email&#160;protected]</a></p>
                 
                 <p style="margin-top: 2rem;"><strong>Affiliations:</strong></p>
                 <p>Universidad San Sebastián<br>
@@ -316,6 +321,4 @@
 
         <footer>
             <p>Kenneth Bunker</p>
-            <p style="margin-top: 0.5rem;">Universidad San Sebastián · Laboratorio Democracia y Gobierno</p>
-            <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licensed under CC BY-NC-ND 4.0</p>
-        </footer> 
+            <p style="m
