--- a/cpld/cpld-about-es.html
+++ b/cpld/cpld-about-es.html
@@ -98,7 +98,7 @@
         }
 
         .nav-tab {
-            font-size: 0.9rem;
+            font-size: 1rem;
             color: var(--grey-mid);
             text-decoration: none;
             font-weight: 400;
@@ -190,7 +190,7 @@
             padding-top: 2rem;
             border-top: 1px solid var(--grey-light);
             color: var(--grey-mid);
-            font-size: 0.9rem;
+            font-size: 1rem;
         }
 
         footer a {
@@ -235,7 +235,7 @@
                 <a href="index-es.html" class="nav-tab">Inicio</a>
                 <a href="cpld-about-es.html" class="nav-tab active">Acerca de</a>
                 <a href="cpld-contact-es.html" class="nav-tab">Contacto</a>
-                <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center;">
+                <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center; font-size: 0.85rem;">
                     <a href="cpld-about.html" style="color: var(--grey-mid); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--blue)'" onmouseout="this.style.color='var(--grey-mid)'">English</a>
                     <span style="color: var(--grey-light);">|</span>
                     <span style="color: var(--black); font-weight: 500;">Español</span>
