--- a/cpld/cpld-contact-es.html
+++ b/cpld/cpld-contact-es.html
@@ -98,7 +98,7 @@
         }
 
         .nav-tab {
-            font-size: 0.9rem;
+            font-size: 1rem;
             color: var(--grey-mid);
             text-decoration: none;
             font-weight: 400;
@@ -217,7 +217,7 @@
             padding-top: 2rem;
             border-top: 1px solid var(--grey-light);
             color: var(--grey-mid);
-            font-size: 0.9rem;
+            font-size: 1rem;
         }
 
         footer a {
@@ -266,7 +266,7 @@
                 <a href="index-es.html" class="nav-tab">Inicio</a>
                 <a href="cpld-about-es.html" class="nav-tab">Acerca de</a>
                 <a href="cpld-contact-es.html" class="nav-tab active">Contacto</a>
-                <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center;">
+                <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center; font-size: 0.85rem;">
                     <a href="cpld-contact.html" style="color: var(--grey-mid); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--blue)'" onmouseout="this.style.color='var(--grey-mid)'">English</a>
                     <span style="color: var(--grey-light);">|</span>
                     <span style="color: var(--black); font-weight: 500;">Español</span>
@@ -279,7 +279,7 @@
 
             <div class="content">
                 <p><strong>Investigador Principal:</strong> Kenneth Bunker</p>
-                <p><strong>Email:</strong> kenneth.bunker@uss.cl</p>
+                <p><strong>Email:</strong> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="0e656b60606b7a66206c7b60656b7c4e7b7d7d206d62">[email&#160;protected]</a></p>
                 
                 <p style="margin-top: 2rem;"><strong>Afiliaciones:</strong></p>
                 <p>Universidad San Sebastián<br>
@@ -365,11 +365,4 @@
                 <h3>Dataset Access</h3>
                 <p>The CPLD is openly available through Harvard Dataverse. No special permission is required to download or use the data.</p>
                 <p>Access: <a href="https://doi.org/10.7910/DVN/NGRY3R" target="_blank" style="color: var(--blue);">doi.org/10.7910/DVN/NGRY3R</a></p>
-                <p>If you use the dataset in your research, please cite the associated publication.</p>
-            </div>
-
-        </main>
-
-        <footer>
-            <p>Kenneth Bunker</p>
-            <p style="m
+                <p>If you use the dataset in your research, please cite the associated publ
