--- a/cpld/index-es.html
+++ b/cpld/index-es.html
@@ -143,7 +143,7 @@
         }
 
         .nav-tab {
-            font-size: 0.9rem;
+            font-size: 1rem;
             color: var(--grey-mid);
             text-decoration: none;
             font-weight: 400;
@@ -276,7 +276,7 @@
         }
 
         .link-meta {
-            font-size: 0.9rem;
+            font-size: 1rem;
             color: var(--grey-mid);
             margin-top: 0.25rem;
             font-weight: 300;
@@ -325,7 +325,7 @@
             padding-top: 2rem;
             border-top: 1px solid var(--grey-light);
             color: var(--grey-mid);
-            font-size: 0.9rem;
+            font-size: 1rem;
         }
 
         footer a {
@@ -391,7 +391,7 @@
                 <a href="index-es.html" class="nav-tab active">Inicio</a>
                 <a href="cpld-about-es.html" class="nav-tab">Acerca de</a>
                 <a href="cpld-contact-es.html" class="nav-tab">Contacto</a>
-                <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center;">
+                <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center; font-size: 0.85rem;">
                     <a href="index.html" style="color: var(--grey-mid); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--blue)'" onmouseout="this.style.color='var(--grey-mid)'">English</a>
                     <span style="color: var(--grey-light);">|</span>
                     <span style="color: var(--black); font-weight: 500;">Español</span>
@@ -399,7 +399,7 @@
             </nav>
         </header>
 
-        <h2 class="section">Descripción General</h2>
+        <h1 class="page-title">Descripción General</h1>
 
         <div class="description">
             <p>El Chilean Political Landscape Dataset es un dataframe longitudinal de <strong>resultados electorales a nivel distrital</strong> que abarca cuatro décadas de democracia chilena. Contiene medidas estandarizadas de fragmentación del sistema de partidos, orientación ideológica y cambio institucional en contiendas legislativas, regionales y municipales. <strong>La versión 1.0</strong> contiene 5.301 observaciones y se expandirá a medida que nuevos datos electorales estén disponibles.</p>
@@ -574,7 +574,7 @@ doi: <a href="https://doi.org/10.1057/s41599-025-06180-1" style="color: var(--bl
 
         <section class="section" style="border-top: 1px solid var(--grey-light); padding-top: 2rem; margin-top: 3rem;">
             <h2 class="section-title">Palabras Clave y Cobertura del Dataset</h2>
-            <div style="color: var(--grey-mid); font-size: 0.9rem; line-height: 1.8;">
+            <div style="color: var(--grey-mid); font-size: 1rem; line-height: 1.8;">
                 <p><strong>Sistemas Electorales y Medidas:</strong> Número Efectivo de Partidos (NEP), NEPv (votos), NEPs (escaños), índice Laakso-Taagepera, fragmentación del sistema de partidos, magnitud de distrito, tamaño de asamblea, modelo de producto de escaños, representación proporcional, análisis de reforma electoral</p>
                 
                 <p style="margin-top: 1rem;"><strong>Índices de Desproporcionalidad:</strong> Índice Gallagher, índice Loosemore-Hanby, índice Rae, índices Lijphart, medidas Cox-Shugart, desproporcionalidad electoral, relación escaños-votos, equidad representacional</p>
