--- a/cpld/cpld-contact.html
+++ b/cpld/cpld-contact.html
@@ -98,7 +98,7 @@
         }
 
         .nav-tab {
-            font-size: 0.9rem;
+            font-size: 1rem;
             color: var(--grey-mid);
             text-decoration: none;
             font-weight: 400;
@@ -217,7 +217,7 @@
             padding-top: 2rem;
             border-top: 1px solid var(--grey-light);
             color: var(--grey-mid);
-            font-size: 0.9rem;
+            font-size: 1rem;
         }
 
         footer a {
@@ -266,7 +266,7 @@
                 <a href="index.html" class="nav-tab">Home</a>
                 <a href="cpld-about.html" class="nav-tab">About</a>
                 <a href="cpld-contact.html" class="nav-tab active">Contact</a>
-                <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center;">
+                <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center; font-size: 0.85rem;">
                     <span style="color: var(--black); font-weight: 500;">English</span>
                     <span style="color: var(--grey-light);">|</span>
                     <a href="cpld-contact-es.html" style="color: var(--grey-mid); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--blue)'" onmouseout="this.style.color='var(--grey-mid)'">Español</a>
