--- a/cpld/index.html
+++ b/cpld/index.html
@@ -143,7 +143,7 @@
         }
 
         .nav-tab {
-            font-size: 0.9rem;
+            font-size: 1rem;
             color: var(--grey-mid);
             text-decoration: none;
             font-weight: 400;
@@ -391,7 +391,7 @@
                 <a href="index.html" class="nav-tab active">Home</a>
                 <a href="cpld-about.html" class="nav-tab">About</a>
                 <a href="cpld-contact.html" class="nav-tab">Contact</a>
-                <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center;">
+                <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center; font-size: 0.85rem;">
                     <span style="color: var(--black); font-weight: 500;">English</span>
                     <span style="color: var(--grey-light);">|</span>
                     <a href="index-es.html" style="color: var(--grey-mid); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--blue)'" onmouseout="this.style.color='var(--grey-mid)'">Español</a>
@@ -399,7 +399,7 @@
             </nav>
         </header>
 
-        <h2 class="section">Overview</h2>
+        <h1 class="page-title">Overview</h1>
 
         <div class="description">
             <p>The Chilean Political Landscape Dataset is a longitudinal dataframe of <strong>district-level electoral outcomes</strong> spanning across four decades of Chilean democracy. It contains standardized measures of party system fragmentation, ideological orientation, and institutional change across legislative, regional, and municipal contests. <strong>Version 1.0</strong> contains 5,301 observations and will expand as new electoral data become available.</p>
