--- a/cpld/index-es.html
+++ b/cpld/index-es.html
@@ -402,7 +402,7 @@
         <h1 class="page-title">Descripción General</h1>
 
         <div class="description">
-            <p>El Chilean Political Landscape Dataset es un dataframe longitudinal de <strong>resultados electorales a nivel distrital</strong> que abarca cuatro décadas de democracia chilena. Contiene medidas estandarizadas de fragmentación del sistema de partidos, orientación ideológica y cambio institucional en contiendas legislativas, regionales y municipales. <strong>La versión 1.0</strong> contiene 5.301 observaciones y se expandirá a medida que nuevos datos electorales estén disponibles.</p>
+            <p>El <strong>Chilean Political Landscape Dataset (CLPD)</strong> es un dataframe longitudinal de <strong>resultados electorales a nivel distrital</strong> que abarca cuatro décadas de democracia chilena. Contiene medidas estandarizadas de fragmentación del sistema de partidos, orientación ideológica y cambio institucional en contiendas legislativas, regionales y municipales. <strong>La versión 1.0</strong> contiene 5.301 observaciones y se expandirá a medida que nuevos datos electorales estén disponibles.</p>
             <p style="margin-top: 1rem; font-size: 0.95rem; color: var(--grey-mid);">Formatos de datos optimizados para flujos de trabajo en Python (pandas) y R (tidyverse).</p>
         </div>
 
